--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASS=root
+# DB_PASS=''
 DB_DIALECT=postgres
 DB_NAME_TEST=test1
 DB_NAME_DEVELOPMENT=test1
